# routes/api.php
@@ -101,6 +101,8 @@ Route::prefix('/v1')->group(function () {
         Route::prefix("factor")->group(function () {
             Route::post('', [FactorController::class, 'store'])->middleware('permission:can-create-invoice');
             Route::get('', [FactorController::class, 'invoicesList']);
+            //update factor
+            Route::put('{factor_id}', [FactorController::class, 'update'])->middleware('permission:can-change-invoice-status');
             Route::get('status', [FactorController::class, 'getFactorStatuses']);
             // ->middleware('permission:can-create-invoice');
             ///v1/factor/{factor_id}/factorItem"
@@ -110,6 +112,8 @@ Route::prefix('/v1')->group(function () {
             Route::delete('{factor_id}/factorItem/{factor_item_id}', [FactorController::class, 'destroyFactorItem'])->middleware('permission:can-delete-invoice-item');
             ///v1/factor/{factor_id}/factorStatus
             Route::post('{factor_id}/factorStatus', [FactorController::class, 'setFactorStatus'])->middleware('permission:can-change-invoice-status');
+           //accept factor by admin
+            Route::post('{factor_id}/accept', [FactorController::class, 'acceptFactor'])->middleware('permission:can-change-invoice-status');
             //"/v1/factor/{factor_id}
             Route::get('{factor_code}', [FactorController::class, 'show']);
             // ->middleware('permission:can-view-invoice'); //can-view-all-invoices handle inside!
